# poloymarket_Agent

./: .gitignore  PAPER_TRADING_GUIDE.md  RULES.md  TESTING_AND_REALITY_CHECK.md  polymarket-agent-analysis.html  polymarket-agent-claude-code-prompt.md  polymarket-agent-deep-audit.docx
polymarket-agent/: .env.example  .gitignore  Cargo.toml  PRODUCTION_DEPLOYMENT.md  README.md
polymarket-agent/config/: default.toml
polymarket-agent/deploy/: polymarket-agent.service  setup.sh
polymarket-agent/migrations/: 001_init.sql
polymarket-agent/src/: config.rs  lib.rs  main.rs
polymarket-agent/src/agent/: lifecycle.rs  mod.rs  self_funding.rs
polymarket-agent/src/backtesting/: engine.rs  historical.rs  mod.rs  results.rs
polymarket-agent/src/data/: crypto.rs  mod.rs  news.rs  quality.rs  sports.rs  weather.rs
polymarket-agent/src/db/: store.rs
polymarket-agent/src/execution/: fills.rs  mod.rs  order.rs  resolution.rs  wallet.rs
polymarket-agent/src/market/: category.rs  mod.rs  models.rs  polymarket.rs  scanner.rs
polymarket-agent/src/monitoring/: alerts.rs  dashboard.rs  health.rs  logger.rs  metrics.rs  mod.rs
polymarket-agent/src/risk/: exit.rs  kelly.rs  limits.rs  mod.rs  portfolio.rs
polymarket-agent/src/valuation/: calibration.rs  claude.rs  edge.rs  fair_value.rs  mod.rs
polymarket-agent/static/: index.html
polymarket-agent/tests/: integration.rs  kelly_tests.rs
